--- a/books/html/LibCurl.html
+++ b/books/html/LibCurl.html
@@ -460,7 +460,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 </ul>
 </li>
-<li><a href="#_development_with_c">3. Development with C++</a></li>
+<li><a href="#_development_with_c">3. Development with C++</a>
+<ul class="sectlevel2">
+<li><a href="#_introduction_2">3.1. Introduction</a></li>
+<li><a href="#_exemples">3.2. Exemples</a>
+<ul class="sectlevel3">
+<li><a href="#_simple_get_with_writting_to_the_file">3.2.1. Simple get with writting to the file</a></li>
+</ul>
+</li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -623,6 +632,8 @@ Ws2_32.lib</pre>
 <div class="sect1">
 <h2 id="_development_with_c">3. Development with C++</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_introduction_2">3.1. Introduction</h3>
 <div class="paragraph">
 <p>Libcurl with c
 There's basically only one thing to keep in mind when using C instead of C when interfacing libcurl:</p>
@@ -644,12 +655,54 @@ There's basically only one thing to keep in mind when using C instead of C when 
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_exemples">3.2. Exemples</h3>
+<div class="sect3">
+<h4 id="_simple_get_with_writting_to_the_file">3.2.1. Simple get with writting to the file</h4>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="c++"><span style="color:#579">#include</span> <span style="color:#B44;font-weight:bold">&lt;iostream&gt;</span>
+<span style="color:#579">#define</span> CURL_STATICLIB
+<span style="color:#579">#include</span> <span style="color:#B44;font-weight:bold">&lt;curl/curl.h&gt;</span>
+
+<span style="color:#777">// to avoid issue with fopen</span>
+<span style="color:#579">#pragma</span> warning(disable:<span style="color:#00D">4996</span>)
+
+<span style="color:#0a8;font-weight:bold">int</span> main()
+{
+    CURL* curl;
+    CURLcode res;
+
+    curl = curl_easy_init();
+    <span style="color:#080;font-weight:bold">if</span> (curl) {
+        curl_easy_setopt(curl, CURLOPT_URL, <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">https://www.google.com</span><span style="color:#710">&quot;</span></span>);
+
+        FILE* file = fopen(<span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">google_com.htm</span><span style="color:#710">&quot;</span></span>, <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">w</span><span style="color:#710">&quot;</span></span>);
+
+        curl_easy_setopt(curl, CURLOPT_WRITEDATA, file);
+        <span style="color:#777">/* Perform the request, res will get the return code */</span>
+        res = curl_easy_perform(curl);
+        <span style="color:#777">/* Check for errors */</span>
+        <span style="color:#080;font-weight:bold">if</span> (res != CURLE_OK)
+            std::cerr &lt;&lt; <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">curl_easy_perform() failed:</span><span style="color:#710">&quot;</span></span> &lt;&lt; curl_easy_strerror(res) &lt;&lt; std::endl;
+
+
+        <span style="color:#777">/* always cleanup */</span>
+        curl_easy_cleanup(curl);
+        fclose(file);
+    }
+}</code></pre>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
 Version 1.0<br>
-Last updated 2022-05-15 21:08:48 +0200
+Last updated 2022-05-15 22:19:36 +0200
 </div>
 </div>
 </body>
